[package]
name = "umisamedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse-rs = "0.1.0"
csv = "1.2.2"
linear-map = "1.2.0"
rust-htslib = { version = "*", features = ["bzip2", "lzma"] }
serde = { version = "*", features = ["derive"] }

